# vepryk6plus

src/: main.c
ssh-bridge/raspberry/: CMakeLists.txt  main.py
vepryk-control/: README.md  final_10k_results.json  requirements.txt  rtt_benchmark.py
vepryk-control/network/: mavlink_sender.cpp
